grammar.js
    source_file: ($) => seq(
      $.package_clause,
      $._terminator,
      repeat(seq($.import_declaration, $._terminator)),
      repeat(seq($._top_level_declaration, $._terminator)),
    ),

    package_clause: ($) => seq('package', field('name', packageIdentifier($))),

    import_declaration: ($) => seq('import', choice($.import_spec, seq('(', terminated($, $.import_spec), ')'))),

    import_spec: ($) => seq(
      optional(choice(
        field('name', alias('.', $.dot)),
        seq(field('name', choice(alias('_', $.blank_identifier), packageIdentifier($))), $._same_line),
      )),
      field('path', $._string_literal),
    ),

    _top_level_declaration: ($) => choice($._declaration, $.function_declaration, $.method_declaration),

    var_declaration: ($) => seq('var', choice($.var_spec, seq('(', terminated($, $.var_spec), ')'))),

    var_spec: ($) => seq(
      elementList($, field('name', $.identifier)),
      $._same_line,
      choice(
        seq(field('type', $._type), optional(seq('=', field('value', $.expression_list)))),
        seq('=', field('value', $.expression_list)),
      ),
    ),

    function_declaration: ($) => seq(
      'func',
      field('name', $.identifier),
      $._same_line,
      optional(typeParametersOnTheLine($)),
      field('parameters', $.parameters),
      optional(field('result', $._result)),
      optional(seq($._brace_on_same_line, field('body', $.block))),
    ),

    parameters: ($) => seq('(', optional(choice($._named_parameters, $._unnamed_parameters)), ')'),

    _named_parameters: ($) => seq(
      choice(
        seq(
          elementList($, $.parameter_declaration),
          optional(seq($._element_end, ',', alias($.variadic_parameter_declaration, $.parameter_declaration))),
        ),
        alias($.variadic_parameter_declaration, $.parameter_declaration),
      ),
      $._element_end,
      optional(','),
    ),

    _unnamed_parameters: ($) => seq(
      choice(
        seq(
          elementList($, alias($.unnamed_parameter_declaration, $.parameter_declaration)),
          optional(seq(
            $._element_end,
            ',',
            alias($.unnamed_variadic_parameter_declaration, $.parameter_declaration),
          )),
        ),
        alias($.unnamed_variadic_parameter_declaration, $.parameter_declaration),
      ),
      $._element_end,
      optional(','),
    ),

    parameter_declaration: ($) => seq(elementList($, field('name', $.identifier)), field('type', $._type)),

    _result: ($) => choice($.parameters, $._simple_type),

    _type: ($) => choice($._simple_type, $.parenthesized_type),

    block: ($) => seq('{', optional($._block_statement_list), '}'),

    _block_statement_list: ($) => statementList($, [$._statement, alias($.empty_labeled_statement, $.labeled_statement)]),

    _statement: ($) => choice(
      $._declaration,
      $._simple_statement,
      $.labeled_statement,
      $.go_statement,
      $.defer_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.goto_statement,
      $.fallthrough_statement,
      $.block,
      $.if_statement,
      $.expression_switch_statement,
      $.type_switch_statement,
      $.select_statement,
      $.for_statement,
    ),

    if_statement: ($) => seq(
      'if',
      optional($._header_initializer),
      field('condition', $._header_expression),
      $._brace_on_same_line,
      field('body', $.block),
      optional(seq('else', field('else', choice($.block, $.if_statement)))),
    ),

    _header_initializer: ($) => choice(seq(field('init_statement', $._header_simple_statement), $._terminator), ';'),

    arguments: ($) => seq(
      '(',
      optional(seq(
        elementList($, $._expression),
        choice(seq($._element_end, optional(',')), seq('...', optional(','))),
      )),
      ')',
    ),

    literal_value: ($) => seq('{', optional(closedElementList($, choice($._element, $.keyed_element))), '}'),

    _element: ($) => choice($._expression, $.literal_value),

    keyed_element: ($) => seq(field('key', $._element), $._colon_on_same_line, ':', field('element', $._element)),

    _string_literal: ($) => choice($.raw_string_literal, $.interpreted_string_literal),

    raw_string_literal: ($) => seq(
      '`',
      optional(alias($._raw_string_content, $.string_content)),
      token.immediate('`'),
    ),

    _raw_string_content: (_) => token.immediate(prec(1, /[^`]+/)),

    interpreted_string_literal: ($) => seq(
      '"',
      repeat(choice(alias($._interpreted_string_content, $.string_content), $.escape_sequence)),
      token.immediate('"'),
    ),

    _interpreted_string_content: (_) => token.immediate(prec(1, /[^"\\\n]+/)),

    escape_sequence: (_) => token.immediate(new RegExp(`\\\\([abfnrtv\\\\"]|${ESCAPE_TAIL})`)),

    rune_literal: (_) => token(new RegExp(`'([^'\\\\\\n]|\\\\([abfnrtv\\\\']|${ESCAPE_TAIL}))'`)),

    int_literal: (_) => token(new RegExp(INT_LITERAL)),

    float_literal: (_) => token(new RegExp(FLOAT_LITERAL)),

    // constraint: both parsers check the digits against the base for an integer literal only, so `0b9i` is valid
    imaginary_literal: (_) => token(new RegExp(
      `(${DECIMAL_DIGITS}|${INT_LITERAL}|0[bBoO](_?[0-9])+|${FLOAT_LITERAL})i`,
    )),

    identifier: (_) => /[_\p{L}][_\p{L}\p{Nd}]*/,

    _terminator: ($) => choice(';', $._automatic_semicolon),

    comment: (_) => token(choice(
      seq('//', /[^\n]*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),
  },
});

/**
 * @param {GrammarSymbols<string>} $
 * @returns {AliasRule}
 */
function typeIdentifier($) {
  return alias($.identifier, $.type_identifier);
}

/**
 * @param {GrammarSymbols<string>} $
 * @returns {AliasRule}
 */
function fieldIdentifier($) {
  return alias($.identifier, $.field_identifier);
}

/**
 * @param {GrammarSymbols<string>} $
 * @returns {AliasRule}
 */
function packageIdentifier($) {
  return alias($.identifier, $.package_identifier);
}

/**
 * @param {GrammarSymbols<string>} $
 * @returns {AliasRule}
 */
function labelName($) {
  return alias($.identifier, $.label);
}

// constraint: Go reads the longest operator token, and tree-sitter reads only the tokens of the current state; a form
// that ends at `_never_returned` makes the long token valid where no rule takes it, so `a--b` is not `a - -b`
/**
 * @param {string[]} tokens
 * @returns {ChoiceRule}
 */
function wholeToken(tokens) {
  return choice(...tokens.map((token) => alias(token, '+')));
}

// constraint: the scanner never returns `_line_continues`; where it is valid, a line end needs an automatic semicolon
/**
 * @param {GrammarSymbols<string>} $
 * @returns {SeqRule}
 */
function typeParametersOnTheLine($) {
  return seq(field('type_parameters', $.type_parameters), optional($._line_continues));
}

// constraint: go/parser reads `type T[P X]` as type parameters when X holds a type literal or `~` term (isTypeElem)
/**
 * @param {RuleOrLiteral} rule
 * @returns {PrecRule}
 */
function typeElementInExpression(rule) {
  return prec.dynamic(PREC.TYPE_ELEMENT_IN_EXPRESSION, rule);
}

// constraint: Go omits the semicolon only before a closing brace, so a statement without a terminator and a label
// without a statement may end only the last clause
/**
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral} clause
 * @param {RuleOrLiteral} finalClause
 * @returns {SeqRule}
 */
function caseBody($, clause, finalClause) {
  return seq(
    '{',
    repeat(choice(clause, alias($.default_clause, clause))),
    optional(choice(alias(finalClause, clause), alias($.final_default_clause, clause))),
    '}',
  );
}

/**
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral[]} finalForms
 * @returns {ChoiceRule}
 */
function statementList($, finalForms) {
  return choice(
    seq(repeat1(statementItem($)), optional(choice(...finalForms))),
    ...finalForms,
  );
}

// constraint: Go inserts no semicolon after `:`, so only an explicit `;` ends a label without a statement
/**
 * @param {GrammarSymbols<string>} $
 * @returns {ChoiceRule}
 */
function statementItem($) {
  return choice(
    seq($._statement, $._terminator),
    alias($.semicolon_labeled_statement, $.labeled_statement),
    $.empty_statement,
  );
}

// constraint: Go inserts a semicolon at a line end after the last token of an element, so `,` stays on its line
/**
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral} rule
 * @returns {SeqRule}
 */
function elementList($, rule) {
  return seq(rule, repeat(seq($._element_end, ',', rule)));
}

/**
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral} rule
 * @returns {SeqRule}
 */
function closedElementList($, rule) {
  return seq(elementList($, rule), $._element_end, optional(','));
}

/**
 * @param {RuleOrLiteral} rule
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

// constraint: Go lets a list omit the semicolon before a closing `)` or `}`
/**
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral} rule
 * @returns {SeqRule}
 */
function terminated($, rule) {
  return seq(repeat(seq(rule, $._terminator)), optional(rule));
}
