test/corpus/recovery.txt
================================================================================
An open call does not take the statements after it
================================================================================

package p

func f() {
	x := g(
	y := 2
	h(y)
}

func k() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (short_var_declaration
        left: (expression_list
          (identifier))
        (ERROR
          (identifier)
          (identifier))
        right: (expression_list
          (int_literal)))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier))))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A string without an end does not take the next statement
================================================================================

package p

func f() {
	x := "abc
	y := 2
	h(y)
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (short_var_declaration
        left: (expression_list
          (identifier))
        (ERROR
          (string_content)
          (identifier))
        right: (expression_list
          (int_literal)))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier)))))))

================================================================================
An open block at a line end does not take the next statement
================================================================================

package p

func f() {
	x := 1 {
	y := 2
	h(y)
}

func k() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (short_var_declaration
        left: (expression_list
          (identifier))
        right: (expression_list
          (int_literal)))
      (ERROR)
      (short_var_declaration
        left: (expression_list
          (identifier))
        right: (expression_list
          (int_literal)))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier))))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
An unfinished selector does not take the statement after the next
================================================================================

package p

func f() {
	a := b.
	c := 1
	d(c)
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (short_var_declaration
        left: (expression_list
          (identifier))
        right: (expression_list
          (selector_expression
            operand: (identifier)
            field: (field_identifier))))
      (ERROR
        (int_literal))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier)))))))

================================================================================
An argument list that a line end leaves open takes a MISSING parenthesis
================================================================================

package p

func f() {
	a = append(a, b
	c := 1
}

func g() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (assignment
        left: (expression_list
          (identifier))
        right: (expression_list
          (call_expression
            function: (identifier)
            arguments: (arguments
              (identifier)
              (identifier)
              (MISSING ")")))))
      (short_var_declaration
        left: (expression_list
          (identifier))
        right: (expression_list
          (int_literal)))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A block that the end of the file leaves open takes a MISSING brace
================================================================================

package p

func f() {
	a := 1
	if a > 0 {
		b(a)
	}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (short_var_declaration
        left: (expression_list
          (identifier))
        right: (expression_list
          (int_literal)))
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (int_literal))
        body: (block
          (expression_statement
            (call_expression
              function: (identifier)
              arguments: (arguments
                (identifier))))))
      (MISSING "}"))))

================================================================================
A function without its opening brace does not take the declarations before it
================================================================================

package p

func a() {}

func b()
	c(d)
}

func e() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block))
  (function_declaration
    name: (identifier)
    parameters: (parameters))
  (ERROR
    (identifier)
    (identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A last element without its comma does not take the declaration after the list
================================================================================

package p

var x = T{
	a: 1,
	b: 2
}

func f() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (type_identifier)
          value: (literal_value
            (keyed_element
              key: (identifier)
              element: (int_literal))
            (keyed_element
              key: (identifier)
              element: (int_literal))
            (ERROR))))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A last argument without its comma before a line comment does not take the next statement
================================================================================

package p

func f() {
	g(
		a,
		b // the last
	)
	h()
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier)
            (identifier)
            (comment)
            (ERROR))))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (arguments))))))

================================================================================
A last parameter without its comma does not take the next function
================================================================================

package p

func f(
	a int,
	b int
) {
}

func g() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter_declaration
        name: (identifier)
        type: (type_identifier))
      (parameter_declaration
        name: (identifier)
        type: (type_identifier))
      (ERROR))
    body: (block))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A package clause without a name does not take the declarations after it
================================================================================

package

import "fmt"

func f() {
	fmt.Println(1)
}

--------------------------------------------------------------------------------

(source_file
  (ERROR)
  (import_declaration
    (import_spec
      path: (interpreted_string_literal
        (string_content))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (expression_statement
        (call_expression
          function: (selector_expression
            operand: (identifier)
            field: (field_identifier))
          arguments: (arguments
            (int_literal)))))))

================================================================================
A token before the name of a package clause does not take the clause
================================================================================

package =main

import "fmt"

func f() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    (ERROR)
    name: (package_identifier))
  (import_declaration
    (import_spec
      path: (interpreted_string_literal
        (string_content))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A rejected comment before the first token does not take a fragment
================================================================================

//line x.go:0
x := 1

func f() {}

--------------------------------------------------------------------------------

(source_file
  (ERROR)
  (short_var_declaration
    left: (expression_list
      (identifier))
    right: (expression_list
      (int_literal)))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A rejected comment before a package clause without a name does not take the declarations
================================================================================

//line x.go:0
package

import "fmt"

func f() {}

--------------------------------------------------------------------------------

(source_file
  (ERROR)
  (import_declaration
    (import_spec
      path: (interpreted_string_literal
        (string_content))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A rejected comment in a package clause does not take the name on the next line
================================================================================

package /*line x.go:0*/
	p

func f() {}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    (ERROR)
    (comment)
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
A package clause in a fragment does not take the statements before it
================================================================================

x := 1
y := 2

package p

func f() {}

--------------------------------------------------------------------------------

(source_file
  (short_var_declaration
    left: (expression_list
      (identifier))
    right: (expression_list
      (int_literal)))
  (short_var_declaration
    left: (expression_list
      (identifier))
    right: (expression_list
      (int_literal)))
  (ERROR)
  (expression_statement
    (identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block)))
